add fixes from meeting
